# Game_Engine_Architecture

./: .gitignore  AppIconResources.qrc  Components.cpp  Components.h  DoxygenFrontPage.cpp  ECScoordinator.h  Enemy.js  GEA2021.pro  GameObject.cpp  GameObject.h  Gaute - Game Engine Architecture.dox  Interprate.h  ObjectManager.cpp  ObjectManager.h  Oblig 3.docx  PCH.h  PreCompiledHeaders.h  Qt - Shortcut.lnk  README.md  README.txt  ResourceManager.cpp  ResourceManager.h  SceneScript.js  To-Do.docx  Vectortable.h  WidgetTransform.ui  aabb.cpp  aabb.h  aisystem.cpp  aisystem.h  altypes.h  beziercurve.cpp  beziercurve.h  bigplane.cpp  bigplane.h  billboard.cpp  billboard.h  bspline.cpp  bspline.h  bsplinepath.cpp  (+274 more)
Assets/: Comments from json.txt  Trophies.js  boss.json  default.json  konte.txt  level1 - Copy.json  level1.json  level2.json  lvl1.json  materials.json  scene1.json  scenes.json  terrain.json  test.json
ECS/: ECScoordinator.h  compmanager.h  componentarray.h  entitymanager.cpp  entitymanager.h  systembase.h  systemmanager.h
Engine/: CMakeLists.txt  Setup.bat  conanfile.py  imgui.ini  requirements.txt
Engine/Game/Source/: Main.cs
Engine/Scripts/Source/: Main.cs  Math.cs
Engine/Shaders/: BasicShader.frag  BasicShader.vert  DefS_LightShadows.vert  DefS_LightsShadows.frag  DefS_LightsShadows.vert  G_Buffer.frag  G_Buffer.vert  HudShader.frag  HudShader.vert  OutlineShader.frag  OutlineShader.vert  P_Shadows.frag  P_Shadows.vert  P_ShadowsDepth.frag  P_ShadowsDepth.geo  P_ShadowsDepth.vert  ParticleShader.frag  ParticleShader.vert  PhongShader.frag  PhongShader.vert  SelectionShader.frag  SelectionShader.vert  debugMatShader.frag  debugMatShader.vert
Engine/Source/: CoreMinimal.h  ECSManager.cpp  ECSManager.h  Factory.cpp  Factory.h  FileSystemHelpers.cpp  FileSystemHelpers.h  Line.cpp  Line.h  ParticleVertex.cpp  ParticleVertex.h  Shader.h  Vertex.cpp  Vertex.h  main.cpp  stb_image_implementation.cpp
Engine/Source/Assets/: DefaultAssets.h
Engine/Source/Components/: BaseComponent.cpp  BaseComponent.h  ComponentManager.h  Components.cpp  Components.h
Engine/Source/DataStructures/: SweepAndPrune.cpp  SweepAndPrune.h  TArray.h
Engine/Source/Engine/: Engine.cpp  Engine.h  ScriptEngine.cpp  ScriptEngine.h
Engine/Source/Input/: Input.cpp  Input.h
Engine/Source/SaveLoad/: Load.cpp  Load.h  Save.cpp  Save.h
Engine/Source/Sound/: SoundBuffer.cpp  SoundBuffer.h  SoundDevice.cpp  SoundDevice.h  SoundSource.cpp  SoundSource.h
Engine/Source/Systems/: BaseSystem.cpp  BaseSystem.h  CameraSystem.cpp  CameraSystem.h  CollisionSystem.cpp  CollisionSystem.h  HudSystem.cpp  HudSystem.h  LightSystem.cpp  LightSystem.h  MeshSystem.cpp  MeshSystem.h  ParticleSystem.cpp  ParticleSystem.h  PhysicsSystem.cpp  PhysicsSystem.h  ScriptSystem.cpp  ScriptSystem.h  SelectionSystem.cpp  SelectionSystem.h  SphereSystem.cpp  SphereSystem.h  TerrainDataSystem.cpp  TerrainDataSystem.h  TerrainSystem.cpp  TerrainSystem.h  TextureSystem.cpp  TextureSystem.h  TrailSystem.cpp  TrailSystem.h  TransformSystem.cpp  TransformSystem.h
Engine/Source/UI/: BoxColliderWidget.cpp  BoxColliderWidget.h  Details.cpp  Details.h  MeshWidget.cpp  MeshWidget.h  ParticleWidget.cpp  ParticleWidget.h  ScriptWidget.cpp  ScriptWidget.h  TextureWidget.cpp  TextureWidget.h  TransformWidget.cpp  TransformWidget.h  Viewport.cpp  Viewport.h  Window.cpp  Window.h  WorldOutliner.cpp  WorldOutliner.h
Maps/: kongehuset.txt
MathStuff/: MathStuff.cpp  MathStuff.h
OpenAL/: soundmanager.h  soundsource.cpp  soundsource.h
Plugins/: OBJ_Loader.h
ResourceManager/: colorshader.cpp  colorshader.h  entity.h  gameobjectmanager.cpp  gameobjectmanager.h  meshhandler.cpp  meshhandler.cpp~RF225b9a51.TMP  meshhandler.h  mousepickershader.cpp  mousepickershader.h  particleshader.cpp  particleshader.h  physics.cpp  physics.h  physicshandler.cpp  physicshandler.h  resourcemanager.cpp  resourcemanager.h  shaderhandler.cpp  shaderhandler.h  soundhandler.cpp  soundhandler.h  soundsystem.cpp  soundsystem.h  texturehandler.cpp  texturehandler.h
Saves/: savedLevel.json  testLevel.json
Script/: tinyScript.js
Scripts/: floatingscript.js  levelscript.js
Shaders/: Skyboxshader.vert  TextVertexShader.vert  colorshader.frag  cubemap.frag  cubemap.vert  cubemapshader.cpp  cubemapshader.h  framebuffers.cpp  framebuffers.h  framebuffers_screen.frag  hdr.frag  lightShader.frag  lightShader.vert  mousepickershader.frag  mousepickershader.vert  mousepickingvertex.vert  particle.vert  phong.frag  phong.vert  phongfragment.frag  phongshader.cpp  phongshader.frag  phongshader.h  phongshader.vert  phongvertex.vert  plainfragment.frag  plainshader.cpp  plainshader.vert  plainshaderinstanced.vert  shader.cpp  shader.h  skybox.frag  skybox.vert  skyboxfragment.frag  skyboxshader.vert  skyboxvertex.vert  texture.vert  textureshader.frag  textureshader.vert
gsl/: constants.h  math_constants.h  matrix3x3.cpp  matrix3x3.h  matrix4x4.cpp  matrix4x4.h  vector2d.cpp  vector2d.h  vector3d.cpp  vector3d.h  vector4d.h
help/: PCH.h  texture.cpp  texture.h  vertex.cpp
helper/: PCH.h  cameracomponent.h  components.h  texture.cpp  texture.h  vertex.cpp  vertex.h
objects/: cube.cpp  cube.h  objmesh.cpp  objmesh.h  projectile.cpp  projectile.h  triangle.cpp  triangle.h  xyz.cpp  xyz.h
openal/: soundmanager.cpp  soundmanager.h  soundsource.cpp  soundsource.h  vector3.cpp
saves/: ball.json  entities.json  explosion.json  goal.json  obstacle.json  particleFountain.json  particleTest.json  prefab.json  testCube.json  unit.json  win.json
scenes/: test.json
(+44 files in other folders)
